<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".materiActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Belajar Basic Bahasa Thailand"
            android:gravity="center"
            android:fontFamily="@font/pbold"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraf1"
            android:fontFamily="@font/pmedium"
            android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/paragraf2"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/huruf1"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/huruf2"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/huruf3"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pbold"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:text="@string/subjudul1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:fontFamily="@font/pmedium"
                android:text="@string/konsonan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:fontFamily="@font/pmedium"
                android:text="@string/cth1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/cth2"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pbold"
                android:textSize="20dp"
                android:text="@string/jenishuruf1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/subbab1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:textSize="20dp"
                android:text="@string/rendah"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Catatan :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatan1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/subbab2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:textSize="20dp"
                android:text="@string/tengah"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Catatan :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatan2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/subbab3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:textSize="20dp"
                android:text="@string/tinggi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Catatan :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatan3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pbold"
                android:textSize="20dp"
                android:text="@string/jenistulis1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/penulisan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pbold"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:text="@string/subjudul2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:fontFamily="@font/pmedium"
                android:text="@string/kosakata"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pbold"
                android:textSize="15dp"
                android:text="@string/jenishuruf2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:textSize="15dp"
                android:text="@string/sawatdii"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Catatan :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatan4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="penjelasan perbedaan antara kha dan krab:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:layout_marginStart="10dp"
                android:textColor="#000"
                android:text="@string/kha"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/krab"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pbold"
                android:textSize="20dp"
                android:text="@string/jenistulis1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatanakhir"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/catatanakhir1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pbold"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:text="@string/subjudul3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:fontFamily="@font/pmedium"
                android:text="@string/angka"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pbold"
                android:text="@string/contohangka"
                android:textColor="#000"
                android:textSize="15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:text="@string/satusembilan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Catatan :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/catatan5"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/catatan6"
                android:fontFamily="@font/pmedium"
                android:textColor="#000"/>

        </LinearLayout>

</ScrollView>